[package]
name = "maze_generator_printer"
version = "0.1.0"
edition = "2021"
authors = ["Ladislav Sladecek <ladislav.sladecek@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
regex = "1.10.2"
svg2pdf = "0.2.0"
xmlwriter = "0.1.0"
